# competitive_karuta_trainer

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
pages/: cards_list.py  official_rule.py
resource/: config.toml  ogura_hyakunin_issyu.csv
src/competitive_karuta_trainer/adapters/: __init__.py  session_store_streamlit.py
src/competitive_karuta_trainer/app/: __init__.py  entrypoint.py  state.py
src/competitive_karuta_trainer/app/ports/: session_store.py
src/competitive_karuta_trainer/domain/: __init__.py  constants.py  data.py  game.py
src/competitive_karuta_trainer/services/: app_state.py  audio.py  audio_playback.py  config_loader.py  data_access.py  dataset_loader.py  gameplay.py  kimariji.py
src/competitive_karuta_trainer/ui/: __init__.py  audio_player.py  board.py  header.py  landing.py  muted_stream.py  sidebar.py  status.py
