[project]
name = "competitive_karuta_trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gtts>=2.5.4",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "TID"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
